# wake

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  design.md  run_all.sh
clients/wake-py/: wake_client.py
crates/wake-daemon/: Cargo.toml
crates/wake-daemon/src/: lib.rs  main.rs
crates/wake-daemon/tests/: cross_file.rs  phase6.rs  value_flow.rs
crates/wake-diff/: Cargo.toml
crates/wake-diff/benches/: warm_query.rs
crates/wake-diff/src/: lib.rs
crates/wake-diff/tests/: audit_fixes.rs  cross_file.rs  oracle.rs  phase4.rs
crates/wake-engine/: Cargo.toml
crates/wake-engine/src/: db.rs  lib.rs
crates/wake-engine/tests/: incremental.rs
crates/wake-extract-py/: Cargo.toml
crates/wake-extract-py/src/: lib.rs  null_extract.rs
crates/wake-extract-py/tests/: annotations.rs
crates/wake-feedback/: Cargo.toml
crates/wake-feedback/src/: lib.rs
crates/wake-feedback/tests/: phase5.rs
crates/wake-ir/: Cargo.toml
crates/wake-ir/src/: lib.rs
crates/wake-ir/tests/: phase1.rs
crates/wake-prop-null/: Cargo.toml
crates/wake-prop-null/src/: lib.rs
crates/wake-prop-null/tests/: control_flow.rs  lattice_props.rs  phase2.rs  phase3.rs
crates/wake-schema/: Cargo.toml
crates/wake-schema/src/: lib.rs
harness/agent-loop/: corpus_eval.py  loop_eval.py  report.py  wake_harness.py
harness/eval/: batch_eval.py  fp_sweep.py  metrics.py  partition.py  report.py  requirements.txt  setup.sh  swe_agent_wrapper.py  task_runner.py  wake_hook.py
harness/eval/config/: swe_agent_base.yaml  swe_agent_wake.yaml
probe/: requirements.txt  smoke_test.py
probe/audit/: analyze.py  autolabel.py  collect.py  dataset.py  label.py  schema.py
probe/oracle/: autorecord.py  eval.py  harness.py  record.py  schema.py
probe/oracle/feedback/: astropy__astropy-13453.json  astropy__astropy-14995.json  astropy__astropy-7336.json  astropy__astropy-7606.json  django__django-11119.json  django__django-11179.json  django__django-11265.json  django__django-11299.json  django__django-11400.json  django__django-11451.json  django__django-11477.json  django__django-11555.json  django__django-11740.json  django__django-11790.json  django__django-11880.json  django__django-11885.json  django__django-12273.json  django__django-12741.json  django__django-13012.json  django__django-13089.json  django__django-13158.json  django__django-13195.json  django__django-13344.json  django__django-13658.json  django__django-13794.json  django__django-14315.json  django__django-14351.json  (+66 more)
(+34 files in other folders)
