[package]
name = "wake-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wake-daemon"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
salsa = "0.26"
wake-engine = { path = "../wake-engine" }
wake-schema = { path = "../wake-schema" }
wake-ir = { path = "../wake-ir" }
wake-diff = { path = "../wake-diff" }
wake-feedback = { path = "../wake-feedback" }

[dev-dependencies]
serde_json = "1"
