[package]
name = "wake-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
salsa = "0.26"
wake-engine = { path = "../wake-engine" }
wake-schema = { path = "../wake-schema" }
wake-extract-py = { path = "../wake-extract-py" }
wake-prop-null = { path = "../wake-prop-null" }

[dev-dependencies]
salsa = "0.26"
wake-engine = { path = "../wake-engine" }
wake-schema = { path = "../wake-schema" }
wake-prop-null = { path = "../wake-prop-null" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "warm_query"
harness = false
