[package]
name = "wake-feedback"
version = "0.1.0"
edition = "2024"

[dependencies]
salsa = "0.26"
wake-engine = { path = "../wake-engine" }
wake-schema = { path = "../wake-schema" }
wake-diff = { path = "../wake-diff" }

[dev-dependencies]
salsa = "0.26"
wake-engine = { path = "../wake-engine" }
wake-schema = { path = "../wake-schema" }
wake-diff = { path = "../wake-diff" }
